[tool.poetry]
name = "faiss"
version = "0.1.0"
description = ""
authors = ["yano0 <yanonay3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.23.1"
fugashi = "^1.2.0"
unidic = "^1.1.0"
ipadic = "^1.0.0"
unidic-lite = "^1.0.8"
protobuf = "^6.31.1"
torch = "^2.7.1"
numpy = "^2.3.1"
pandas = "^2.3.0"
faiss-cpu = "^1.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
